--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 </head>
 <body>
+<script src="https://webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
